--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,3 +105,14 @@ services:
       - /mnt/Sentry/Media/Filmes:/filmes #optional
       - /mnt/Sentry/Media/Series:/series #optional
     restart: unless-stopped
+    
+  flaresolverr: 
+    image: ghcr.io/flaresolverr/flaresolverr:latest 
+    container_name: flaresolverr
+    network_mode: "service:gluetun"
+    environment: 
+      - LOG_LEVEL=${LOG_LEVEL:-info} 
+      - LOG_HTML=${LOG_HTML:-false} 
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none} 
+      - TZ=America/Sao_Paulo
+    restart: unless-stopped
