--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - 8989:8989 # Sonarr
       - 6767:6767 # Bazarr
       - 9696:9696 # Prowlarr
+      - 8191:8191 # Flaresolverr
     volumes:
       - /home/ubuntu/docker/arr-stack:/gluetun
     environment:
